--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
         <button type="button" class="submit" id="submit-btn" >Proceed</button>
     </form>
-    <script src="./index.js">
+    <script type='text/javascript' src="./config.js"></script>
+    <script type='text/javascript' src="./index.js">
     </script>    
-    <
+    
 </body>
 </html>
